--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Intent_20210710">
-        <activity android:name=".ViewContentActivity"></activity>
+        <activity android:name=".EditNicknameActivity"></activity>
+        <activity android:name=".ViewContentActivity" />
         <activity android:name=".ViewMessageActivity" />
         <activity android:name=".OtherActivity" />
         <activity android:name=".MainActivity">
